Adopt JSpecify annotations